# garlickboy

./: Cargo.toml  LICENSE  README.md  snt.md
src/: address.rs  bios.rs  controller.rs  cpu.rs  display.rs  emu.rs  gpu.rs  joypad.rs  lib.rs  main.rs  rom.rs  roms.rs  tile.rs  utils.rs
src/chip/: address.rs  bios.rs  bus.rs  interrupts.rs  joypad.rs  mod.rs
src/chip/gpu/: mod.rs  palette.rs
src/chip/instructions/: _bits.rs  _jump.rs  _load.rs  execute.rs  mod.rs
src/chip/instructions/bits/: bit.rs  bit_hl.rs  mod.rs  res.rs  res_hl.rs  set_hl.rs
src/chip/instructions/control/: di.rs  ei.rs  halt.rs  mod.rs  nop.rs
src/chip/instructions/jump/: call.rs  callf.rs  jp.rs  jpf.rs  jphl.rs  jr.rs  jrf.rs  mod.rs  ret.rs  retf.rs  reti.rs  rst.rs
src/chip/instructions/load/: ld_a_ptr.rs  (+21 more)
src/chip/interrupts/: mod.rs  none.rs  vblank.rs
src/cpu/: instructions.rs  mod.rs  registers.rs
src/cpu/instructions/: _bits.rs  _load.rs  _logic.rs  bitwise.rs  control.rs  execute.rs  jump.rs  load.rs  logic.rs  mod.rs
src/emu/: display.rs  mod.rs  rom.rs
src/emu/controller/: keyboard.rs  mod.rs
src/emu/display/: mod.rs  sdl.rs
src/gameboy/: bios.rs  bus.rs  dma.rs  interrupts.rs  joypad.rs  mod.rs  registers.rs
src/gameboy/bus/: address_bus.rs  bios.rs  dma.rs  joypad.rs  mod.rs
src/gameboy/gpu/: mod.rs  palette.rs  ppu.rs
src/gameboy/instructions/: _jump.rs  _load.rs  cycles.rs  execute.rs  mod.rs
src/gameboy/interrupts/: mod.rs  none.rs  vblank.rs
src/gameboy/timer/: mod.rs  tac.rs
src/gpu/: display.rs  mod.rs
src/roms/: rom.rs
tests/: tests.rs
(+188 files in other folders)
