[package]
name = "garlickboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
ctrlc = { version = "3.0", features = ["termination"] }
[dependencies.gl]
git = "https://github.com/bjz/gl-rs"