[package]
name = "garlickboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
[dependencies.sdl2]
version = "0.35"
default-features = true
features = ["gfx"]